Fix: Laptop screen sounds/stats visibile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -378,8 +378,8 @@ section {
     height: 80vw;
     min-width: 280px;
     min-height: 280px;
-    max-width: 35rem;
-    max-height: 35rem;
+    max-width: 28rem;
+    max-height: 28rem;
     overflow: hidden;
     border: 5px solid rgb(0, 0, 0);
     border-radius: 5px;
